2003-11-19  Benhur Stein <benhur@inf.ufsm.br>

	* Source/x11/XGServerEvent.m ([XGServer -processEvent:event]): Correct
	off-by-one error.

2003-11-19  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServer.m: Add some docs.

	* Window focus fixes.
	* Source/x11/XGServerEvent.m ([XGServer -processEvent:event]): Move
	take focus code...
	([XGServer -_handleTakeFocusAtom:forContext:]):  ...to here. Check for
	common problems before passing event to frontend.
	([XGServer -processEvent:event])(FocusOut): Invalidate current
	focus window and focus request.

2003-11-18 16:57  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Remove fallback ivar. Add advancementImgd
	and a simple glyph size cache for use in -advancementForGlyph:.

	(-initWithFontName:matrix:screenFont:): Set up advancementImgd.
	(-advancementForGlyph:): Use advancementImgd instead of setting up
	a FTC_ImageTypeRec on each call. Cache glyph sizes to avoid expensive
	freetype calls.

2003-11-05  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer -processEvent:]): New
	method broken off from -receivedEvent:type:extra:forMode:.

2003-11-05 03:29  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGServerEvent.m (-receivedEvent:type:extra:forMode:):
	Casts as lvalues will be deprecated in gcc 3.4. Thus, don't assign
	to the cWin macro. Reported by Lyndon Tremblay.

2003-11-02 02:58  Alexander Malmberg <alexander@malmberg.org>

	* Source/gsc/GSStreamContext.m Whitespace cleanups.

	(writeHex): Use index properly; don't always write the first byte.
	Use fputc() instead of fprintf() (was doing the hex conversion
	manually anyway, might as well make it efficient).

2003-11-02 02:27  Alexander Malmberg <alexander@malmberg.org>

	* Source/gsc/GSStreamContext.m (fpfloat, writeHex): Make static.

2003-10-29  Yen-Ju Chen <yjchenx@hotmail.com>

	* Source/x11/XGServerWindow.m ([XGServer -_setupRootWindow]): Always
	set WindowMaker app icon property