@@ -1,3 +1,9 @@
+2003-11-20  Adam Fedor  <fedor@gnu.org>
+
+	* Source/xlib/XGBitmap.m (_pixmap_combine_alpha): Use RGetClosestXColor
+	to get colors on 8bit displays.
+	(_bitmap_combine_alpha): Likewise. Fixes PR #6341
+
 2003-11-19  Benhur Stein <benhur@inf.ufsm.br>
 
 	* Source/x11/XGServerEvent.m ([XGServer -processEvent:event]): Correct
